@@ -128,11 +128,17 @@ void list_members ( int fd, const char* name );
 void list_conferences ( int fd );
 void list_all ( int fd );
 
+#ifdef	KICK_MEMBER
 void kick_member ( const char* confname, int user_id);
+#endif
 void kick_all ( void );
 
+#ifdef MUTE_MEMBER
 void mute_member ( const char* confname, int user_id);
+#endif
+#ifdef UNMUTE_MEMBER
 void unmute_member ( const char* confname, int user_id);
+#endif
 
 void mute_conference ( const char* confname);
 void unmute_conference ( const char* confname);
